--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,6 +10,7 @@
     <header>
         <h1>Beauty Hub</h1>
         <nav>
+            <a href="pages/home.html">Home</a>
             <a href="pages/appointment.html">Appointments</a>
             <a href="pages/billing.html">Billing</a>
             <a href="pages/marketing.html">Marketing</a>
