--- a/frontend/pages/appointment.html
+++ b/frontend/pages/appointment.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Beauty Hub - Home</title>
+    <title>Beauty Hub - Appointments</title>
     <link rel="stylesheet" href="css/appointment.css" />
 </head>
 <body>
@@ -22,52 +22,50 @@
         <p>Your one-stop solution for managing appointments, employees, inventory, billing, and marketing for salons and spas.</p>
     </section>
     <main>
-        <h3>Discover Our Services</h3>
-        <p>Explore our comprehensive tools designed to streamline your beauty business operations and enhance customer satisfaction.</p>
-
-        <section class="features">
-            <h4>Why Choose Beauty Hub?</h4>
+        <h3>Appointment Schedules</h3>
+        <section class="appointment-schedules">
+            <p>View your upcoming appointments below:</p>
             <ul>
-                <li>Easy appointment scheduling for customers</li>
-                <li>Efficient employee and inventory management</li>
-                <li>Secure billing and financial reporting</li>
-                <li>Effective marketing tools to grow your business</li>
-                <li>Showcase your salon or spa to attract more customers</li>
+                <li>Monday, June 10 - 10:00 AM - Haircut with Elegant Salon</li>
+                <li>Wednesday, June 12 - 2:00 PM - Spa treatment at Glow Spa</li>
+                <li>Friday, June 14 - 11:00 AM - Facial at Radiance Beauty</li>
             </ul>
         </section>
 
-        <section class="showcase">
-            <h4>Featured Beauty Spots</h4>
-            <div class="spot-list">
-                <article class="spot">
-                    <h5>Elegant Salon</h5>
-                    <p>Experience luxury hair and beauty treatments in a relaxing environment.</p>
-                </article>
-                <article class="spot">
-                    <h5>Glow Spa</h5>
-                    <p>Rejuvenate your body and mind with our exclusive spa services.</p>
-                </article>
-                <article class="spot">
-                    <h5>Radiance Beauty</h5>
-                    <p>Professional skincare and makeup services for every occasion.</p>
-                </article>
-            </div>
+        <h3>Plans</h3>
+        <section class="plans">
+            <p>Choose a plan that suits your beauty needs:</p>
+            <ul>
+                <li>Basic Plan - Includes 1 appointment per month</li>
+                <li>Standard Plan - Includes 3 appointments per month</li>
+                <li>Premium Plan - Unlimited appointments</li>
+            </ul>
         </section>
 
-        <section class="testimonials">
-            <h4>What Our Customers Say</h4>
-            <blockquote>
-                "Beauty Hub made booking my appointments so easy and convenient!" - Sarah L.
-            </blockquote>
-            <blockquote>
-                "The employee management tools helped our salon run smoothly." - James K.
-            </blockquote>
+        <h3>Book an Appointment</h3>
+        <section class="booking">
+            <form id="booking-form">
+                <label for="service">Select Service:</label>
+                <select id="service" name="service" required>
+                    <option value="">--Please choose an option--</option>
+                    <option value="haircut">Haircut</option>
+                    <option value="spa">Spa Treatment</option>
+                    <option value="facial">Facial</option>
+                </select>
+
+                <label for="date">Select Date:</label>
+                <input type="date" id="date" name="date" required />
+
+                <label for="time">Select Time:</label>
+                <input type="time" id="time" name="time" required />
+
+                <button type="submit" class="btn">Book Now</button>
+            </form>
         </section>
 
         <section class="cta">
-            <h4>Ready to Enhance Your Beauty Business?</h4>
-            <a href="pages/appointment.html" class="btn">Book an Appointment</a>
-            <a href="pages/profile.html" class="btn">Create Your Profile</a>
+            <h4>Create a Profile to Manage Your Appointments</h4>
+            <a href="profile.html" class="btn">Create Your Profile</a>
         </section>
     </main>
     <footer>
