--- a/frontend/pages/billing.html
+++ b/frontend/pages/billing.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Beauty Hub - Home</title>
+    <title>Beauty Hub - Billing</title>
     <link rel="stylesheet" href="css/billing.css" />
 </head>
 <body>
@@ -18,56 +18,33 @@
         </nav>
     </header>
     <section class="hero">
-        <h2>Welcome to Beauty Hub</h2>
-        <p>Your one-stop solution for managing appointments, employees, inventory, billing, and marketing for salons and spas.</p>
+        <h2>Billing Processes</h2>
+        <p>Manage your billing efficiently with our streamlined process for products and services.</p>
     </section>
     <main>
-        <h3>Discover Our Services</h3>
-        <p>Explore our comprehensive tools designed to streamline your beauty business operations and enhance customer satisfaction.</p>
+        <h3>Billing Steps</h3>
+        <section class="billing-steps">
+            <ol>
+                <li>Select the products or services to be billed.</li>
+                <li>Verify the quantities and prices.</li>
+                <li>Apply any discounts or promotions.</li>
+                <li>Generate the invoice with detailed billing information.</li>
+                <li>Process payment through available payment methods.</li>
+                <li>Send receipt and confirmation to the customer.</li>
+                <li>Maintain records for accounting and reporting.</li>
+            </ol>
+        </section>
 
-        <section class="features">
-            <h4>Why Choose Beauty Hub?</h4>
+        <h3>Billing Features</h3>
+        <section class="billing-features">
             <ul>
-                <li>Easy appointment scheduling for customers</li>
-                <li>Efficient employee and inventory management</li>
-                <li>Secure billing and financial reporting</li>
-                <li>Effective marketing tools to grow your business</li>
-                <li>Showcase your salon or spa to attract more customers</li>
+                <li>Easy product and service selection</li>
+                <li>Accurate pricing and discount application</li>
+                <li>Multiple payment options</li>
+                <li>Automated invoice generation</li>
+                <li>Secure payment processing</li>
+                <li>Comprehensive billing reports</li>
             </ul>
-        </section>
-
-        <section class="showcase">
-            <h4>Featured Beauty Spots</h4>
-            <div class="spot-list">
-                <article class="spot">
-                    <h5>Elegant Salon</h5>
-                    <p>Experience luxury hair and beauty treatments in a relaxing environment.</p>
-                </article>
-                <article class="spot">
-                    <h5>Glow Spa</h5>
-                    <p>Rejuvenate your body and mind with our exclusive spa services.</p>
-                </article>
-                <article class="spot">
-                    <h5>Radiance Beauty</h5>
-                    <p>Professional skincare and makeup services for every occasion.</p>
-                </article>
-            </div>
-        </section>
-
-        <section class="testimonials">
-            <h4>What Our Customers Say</h4>
-            <blockquote>
-                "Beauty Hub made booking my appointments so easy and convenient!" - Sarah L.
-            </blockquote>
-            <blockquote>
-                "The employee management tools helped our salon run smoothly." - James K.
-            </blockquote>
-        </section>
-
-        <section class="cta">
-            <h4>Ready to Enhance Your Beauty Business?</h4>
-            <a href="pages/appointment.html" class="btn">Book an Appointment</a>
-            <a href="pages/profile.html" class="btn">Create Your Profile</a>
         </section>
     </main>
     <footer>
