--- a/frontend/pages/marketing.html
+++ b/frontend/pages/marketing.html
@@ -54,6 +54,37 @@
             </div>
         </section>
 
+        <section class="salon-showcase">
+            <h4>Great Salons to Explore</h4>
+            <div class="salon-list">
+                <article class="salon">
+                    <img src="../public/salons/b1.png" alt="Salon 1" />
+                    <h5>Salon One</h5>
+                    <p>Top-rated salon offering a wide range of beauty services.</p>
+                </article>
+                <article class="salon">
+                    <img src="../public/salons/b2.png" alt="Salon 2" />
+                    <h5>Salon Two</h5>
+                    <p>Known for excellent customer service and skilled professionals.</p>
+                </article>
+                <article class="salon">
+                    <img src="../public/salons/b3.png" alt="Salon 3" />
+                    <h5>Salon Three</h5>
+                    <p>Specializes in hair styling and spa treatments.</p>
+                </article>
+                <article class="salon">
+                    <img src="../public/salons/b4.png" alt="Salon 4" />
+                    <h5>Salon Four</h5>
+                    <p>Offers luxurious beauty and wellness experiences.</p>
+                </article>
+                <article class="salon">
+                    <img src="../public/salons/b5.png" alt="Salon 5" />
+                    <h5>Salon Five</h5>
+                    <p>Popular for makeup and skincare services.</p>
+                </article>
+            </div>
+        </section>
+
         <section class="testimonials">
             <h4>What Our Customers Say</h4>
             <blockquote>
