--- a/frontend/pages/profile.html
+++ b/frontend/pages/profile.html
@@ -38,9 +38,81 @@
 
             <button type="submit" class="btn">Create Profile</button>
         </form>
+
+        <h3>Login</h3>
+        <form id="login-form">
+            <label for="login-email">Email Address:</label>
+            <input type="email" id="login-email" name="login-email" required />
+
+            <label for="login-password">Password:</label>
+            <input type="password" id="login-password" name="login-password" required />
+
+            <button type="submit" class="btn">Log In</button>
+        </form>
     </main>
     <footer>
         &copy; 2025 Beauty Hub. All rights reserved.
     </footer>
+    <script type="module">
+      import fetchApi from '../helpers/fetchApi.js';
+
+      const form = document.getElementById('profile-form');
+      const loginForm = document.getElementById('login-form');
+
+      form.addEventListener('submit', async (event) => {
+        event.preventDefault();
+
+        const formData = {
+          name: form.name.value,
+          email: form.email.value,
+          phone: form.phone.value,
+          password: form.password.value,
+        };
+
+        try {
+          const response = await fetchApi('api/users', {
+            method: 'POST',
+            headers: {
+              'Content-Type': 'application/json',
+            },
+            body: JSON.stringify(formData),
+          });
+
+          // alert('Profile created successfully!');
+          form.reset();
+          window.location.href = '../profile/profilepage.html';
+        } catch (error) {
+          alert('Error creating profile: ' + (error.error || 'Unknown error'));
+        }
+      });
+
+      loginForm.addEventListener('submit', async (event) => {
+        event.preventDefault();
+
+        const loginData = {
+          email: loginForm['login-email'].value,
+          password: loginForm['login-password'].value,
+        };
+
+        try {
+          const response = await fetchApi('api/auth/login', {
+            method: 'POST',
+            headers: {
+              'Content-Type': 'application/json',
+            },
+            body: JSON.stringify(loginData),
+          });
+
+          // Store JWT token in localStorage
+          localStorage.setItem('token', response.token);
+
+          alert('Login successful! Welcome ' + response.userName);
+          window.location.href = '../profile/profilepage.html';
+        } catch (error) {
+          console.error('Login error:', error);
+          alert('Login failed: ' + (error.error || 'Unknown error'));
+        }
+      });
+    </script>
 </body>
 </html>
