--- a/admin/login.html
+++ b/admin/login.html
@@ -15,8 +15,8 @@
     <div class="modal-content">
       <h2>Admin Login</h2>
       <form id="loginForm">
-        <label for="email">Email</label>
-        <input type="email" id="email" name="email" required />
+        <label for="phone_number">Phone Number</label>
+        <input type="tel" id="phone_number" name="phone_number" required />
         <label for="pin">Pin</label>
         <input type="password" id="pin" name="pin" required />
         <button type="submit" id="loginButton">Login</button>
@@ -25,45 +25,45 @@
     </div>
   </div>
 
-  <script>
-    const loginForm = document.getElementById('loginForm');
-    const errorMessage = document.getElementById('errorMessage');
-    const loginButton = document.getElementById('loginButton');
+      <script>
+        const loginForm = document.getElementById('loginForm');
+        const errorMessage = document.getElementById('errorMessage');
+        const loginButton = document.getElementById('loginButton');
 
-    loginForm.addEventListener('submit', async (e) => {
-      e.preventDefault();
-      errorMessage.textContent = '';
-      loginButton.disabled = true;
+        loginForm.addEventListener('submit', async (e) => {
+          e.preventDefault();
+          errorMessage.textContent = '';
+          loginButton.disabled = true;
 
-      const email = loginForm.email.value.trim();
-      const pin = loginForm.pin.value.trim();
+          const phone_number = loginForm.phone_number.value.trim();
+          const pin = loginForm.pin.value.trim();
 
-      try {
-        const response = await fetch('http://localhost:5000/api/admin/auth/login', {
-          method: 'POST',
-          headers: {
-            'Content-Type': 'application/json',
-          },
-          body: JSON.stringify({ email, pin }),
+          try {
+            const response = await fetch('http://localhost:5000/api/admin/auth/login', {
+              method: 'POST',
+              headers: {
+                'Content-Type': 'application/json',
+              },
+              body: JSON.stringify({ phone_number, pin }),
+            });
+
+            const data = await response.json();
+
+            if (response.ok) {
+              // Save token to localStorage or sessionStorage
+              localStorage.setItem('adminToken', data.token);
+              alert('Login successful! Welcome ' + data.adminName);
+              // Redirect to admin dashboard or page
+              window.location.href = 'pages/profile.html';
+            } else {
+              errorMessage.textContent = data.error || 'Login failed';
+            }
+          } catch (error) {
+            errorMessage.textContent = 'An error occurred. Please try again.';
+          } finally {
+            loginButton.disabled = false;
+          }
         });
-
-        const data = await response.json();
-
-        if (response.ok) {
-          // Save token to localStorage or sessionStorage
-          localStorage.setItem('adminToken', data.token);
-          alert('Login successful! Welcome ' + data.adminName);
-          // Redirect to admin dashboard or page
-          window.location.href = 'pages/profile.html';
-        } else {
-          errorMessage.textContent = data.error || 'Login failed';
-        }
-      } catch (error) {
-        errorMessage.textContent = 'An error occurred. Please try again.';
-      } finally {
-        loginButton.disabled = false;
-      }
-    });
-  </script>
+      </script>
 </body>
 </html>
