--- a/frontend/profile/profilepage.html
+++ b/frontend/profile/profilepage.html
@@ -10,11 +10,11 @@
     <header>
         <h1>Beauty Hub</h1>
         <nav>
-            <a href="/frontend/pages/home.html">Home</a>
-            <a href="/frontend/pages/appointment.html">Appointments</a>
-            <a href="/frontend/pages/billing.html">Billing</a>
-            <a href="/frontend/pages/marketing.html">Marketing</a>
-            <a href="/frontend/pages/profile.html">Profile</a>
+            <a href="../pages/home.html">Home</a>
+            <a href="../pages/appointment.html">Appointments</a>
+            <a href="../pages/billing.html">Billing</a>
+            <a href="../pages/marketing.html">Marketing</a>
+            <a href="../pages/profile.html">Profile</a>
         </nav>
     </header>
     <main>
